@@ -203,7 +203,8 @@ describe 'pupmod::pass_two' do
                     "2020.1.0" => false,
                     "2021.1.0" => false,
                   }.each do |pe_version, tmpdir|
-                    it { is_expected.to contain_file("/opt/puppetlabs/puppet/cache/pserver_tmp")}
+                    it { is_expected.to contain_file("#{File.dirname(facts[:puppet_settings][:master][:server_datadir])}/pserver_tmp")}
+
                     context "when pe_version == #{pe_version}" do
                       let (:facts) do
                         { "pe_build" => pe_version }.merge(facts)
