@@ -1,3 +1,7 @@
+* Thu Jul 19 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.6.1-0
+- Fixed bug in which the JAVA tmpdir path for the puppetserver was
+  incorrectly set.  This could cause puppetserver RPM upgrades to fail.
+
 * Thu Jul 12 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.6.1-0
 - Fixed the new `simp_generate_types` script to ensure that the permissions on
   the created directory are correctly set.
